[gd_scene load_steps=3 format=3 uid="uid://m34p2hvudxok"]

[ext_resource type="Script" path="res://HUD.gd" id="1_4ry1j"]
[ext_resource type="FontFile" uid="uid://c6onnnit7lbi1" path="res://assets/fonts/Xolonium-Regular.ttf" id="1_214ob"]

[node name="HUD" type="CanvasLayer"]
script = ExtResource("1_4ry1j")

[node name="HappinessScore" type="Label" parent="."]
offset_right = 518.0
offset_bottom = 61.0
theme_override_fonts/font = ExtResource("1_214ob")
theme_override_font_sizes/font_size = 48
text = "Happiness 0"

[node name="DaysPassed" type="Label" parent="."]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -45.0
offset_bottom = 81.0
grow_horizontal = 0
theme_override_fonts/font = ExtResource("1_214ob")
theme_override_font_sizes/font_size = 48
text = "Cats 0"
horizontal_alignment = 2

[node name="StartButton" type="Button" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -51.0
offset_top = 103.0
offset_right = 66.0
offset_bottom = 169.0
grow_horizontal = 2
grow_vertical = 0
theme_override_fonts/font = ExtResource("1_214ob")
theme_override_font_sizes/font_size = 48
text = "Play"

[node name="Message" type="Label" parent="."]
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = 36.0
offset_bottom = 72.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("1_214ob")
theme_override_font_sizes/font_size = 26
text = "Keep your cats happy by taking their picture once a day!"
horizontal_alignment = 1
autowrap_mode = 2

[node name="TimeLeftInDay" type="Label" parent="."]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -224.0
offset_top = 56.0
offset_bottom = 92.0
grow_horizontal = 0
size_flags_horizontal = 4
theme_override_fonts/font = ExtResource("1_214ob")
theme_override_font_sizes/font_size = 26
text = "Next day in 6:00"

[node name="MessageTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[connection signal="pressed" from="StartButton" to="." method="_on_start_button_pressed"]
[connection signal="timeout" from="MessageTimer" to="." method="_on_message_timer_timeout"]
